<resources>
    <string name="app_name">TheWeatherlogy App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="firstFragment">Search</string>
    <string name="secondFragment">Results</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="date">Date</string>
    <string name="enter_a_city_name">Enter a city name</string>
    <string name="CheckCityWeather">Check City\'s Weather </string>
    <string name="CheckWeatherUsingLocation">Check Weather Using Location</string>
    <string name="Sunrise">sunrise</string>
    <string name="Sunset">sunset</string>
    <string name="MainDescription">Weather Condition</string>
    <string name="Humidity">Humidity</string>
    <string name="FeelsLike">Feels Like</string>
    <string name="MinTemp">Min Temperature</string>
    <string name="MaxTemp">Max Temperature</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="_5dayweather">5DayWeather</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maxtemp">maxTemp</string>
    <string name="mintemp">minTemp</string>
    <string name="snowPrec">Snow Precipitation</string>
    <string name="rainPrec">Rain Precipitation</string>
    <string name="UnitMeasure">Unit Measure</string>
    <string name="Celsius">C°</string>
    <string name="fahrenheit">F°</string>
    <string name="HighestTemp">H:</string>
    <string name="LowestTemp">L:</string>
    <string name="FiveDayForecast">5-Day Forecast:</string>
    <string name="icon">icon</string>
</resources>